--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,8 @@
-body {
-  font-size: 2rem;
-  text-align: center;
+@import "./globals.scss";
+
+html > body {
+  margin: 0;
+  font-size: 1.2rem;
+  padding: 1rem;
+  background-color: $white;
 }
