--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,10 @@
 @import "./globals.scss";
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 html > body {
   margin: 0;
   font-size: 1.2rem;
   padding: 1rem;
   background-color: $white;
+  font-family: "Poppins", sans-serif;
 }
