--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,8 +3,9 @@
 $separator: #ffffff2f;
 $highlight-blue: #006eff;
 $darkestblue: #234ece;
-$bbb: #161616; //bottom controls background
-$theme: black;
+
+$theme: #d47636;
+$theme2: #008185; //bottom controls background
 
 // sizes
 $small: 0.5rem;
