--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -56,7 +56,7 @@ button {
   height: 2.25rem;
   padding: 0 $small;
 
-  background-color: $darkestblue;
+  background-color: $theme;
   color: $white;
   //   border: solid 1px $gray3;
   cursor: pointer;
