--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -44,11 +44,10 @@
   overflow: hidden;
 }
 
-button {
+button,
+.button {
   border: none;
   font-size: 1.1rem;
-  //   font-size: 0.9rem !important;
-  //   color: inherit;
   border-radius: $small;
   display: flex;
   align-items: center;
@@ -59,6 +58,7 @@ button {
   background-color: $theme;
   color: $white;
   cursor: pointer;
+  text-decoration: none;
 
   svg {
     transition: all 0.2s;
@@ -72,7 +72,7 @@ button {
   }
 
   &:hover {
-  background-color: $theme2;
+    background-color: $theme2;
   }
 }
 
